--- a/css/menu.css
+++ b/css/menu.css
@@ -258,6 +258,7 @@ nav.active .menu li {
     font-size: 3rem;
     font-style: normal;
     text-shadow: none;
+    margin-top: 10%;
     margin-bottom: 10%;
 }
 
